# solitare

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  main.cpp  progress.cpp  progress.h
